@@ -17,7 +17,6 @@
 package org.polypheny.db.cypher.pattern;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 import lombok.Getter;
 import org.polypheny.db.cypher.expression.CypherExpression;
@@ -46,7 +45,7 @@ public class CypherNodePattern extends CypherPattern {
     public CypherNodePattern( ParserPos pos, CypherVariable variable, List<StringPos> labels, CypherExpression properties, CypherExpression predicate ) {
         super( pos );
         this.variable = variable;
-        this.labels = PolyList.copyOf( labels.stream().map( StringPos::getImage ).map( PolyString::of ).collect( Collectors.toList() ) );
+        this.labels = PolyList.copyOf( labels.stream().map( StringPos::getImage ).map( PolyString::of ).toList() );
         this.positions = labels.stream().map( StringPos::getPos ).toList();
         this.properties = properties;
         this.predicate = predicate;
